--- a/public/manifest.json
+++ b/public/manifest.json
@@ -21,5 +21,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#0F172A",
-  "background_color": "#0F172A"
+  "background_color": "#40566E"
 }
